--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,8 @@ remote_theme: vaibhavvikas/jekyll-theme-minimalistic
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
 title: [Jingyi Tian]
-description: [Postdoctoral Fellow \ Bauer Human-Centered AI Institute, Univeristy of Houston]
+description: [Postdoctoral Fellow
+Bauer Human-Centered AI Institute, Univeristy of Houston]
 email: jtian6@central.uh.edu
 logo: IMG_3587.JPG
 color-scheme: auto
