--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 remote_theme: vaibhavvikas/jekyll-theme-minimalistic
-plugins:
+gems:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
 
 title: [Jingyi Tian]
@@ -10,7 +10,7 @@ logo: IMG_3587.JPG
 color-scheme: auto
 favicon: true
 
-plugins:
+gems:
   - jekyll-sitemap
   - jekyll-seo-tag
   - jemoji
